<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Noizer</string>
    <string name="action_exit">Exit</string>
    <string name="action_contact">Feedback</string>
    <string name="action_about">About</string>
    <string name="action_turn_off_all">Turn off all sounds</string>
    <string name="action_about_title">About</string>
    <string name="action_about_description">"Noizer - open source noise manager.\n\nFeel free to send feedback from\n        menu.\n\nSource code:\n<a href="https://github.com/ZorgeR/Noizer">https://github.com/ZorgeR/Noizer</a>\n\n\n    "</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <!-- Title -->
    <string name="sound_title_whitenoise">White noise</string>
    <string name="sound_title_brownnoise">Brown noise</string>
    <string name="sound_title_intrauterine">Intrauterine sound</string>
    <string name="sound_title_wind">Wind</string>
    <string name="sound_title_rain">Rain</string>
    <string name="sound_title_storm">Storm</string>
    <string name="sound_title_fireplace">Fireplace</string>
    <string name="sound_title_birds">Birds</string>
    <string name="sound_title_street">Street</string>
    <string name="sound_title_bar">Bar</string>
    <string name="sound_title_waves">Waves</string>
    <string name="sound_title_foliage">Foliage</string>
    <string name="sound_title_train">Train</string>
    <!-- Desription -->
    <string name="sound_description_whitenoise">Soothe your baby</string>
    <string name="sound_description_brownnoise">Calm down and you</string>
    <string name="sound_description_intrauterine">The familiar atmosphere of the baby</string>
    <string name="sound_description_wind">Melancholy</string>
    <string name="sound_description_rain">Relaxes</string>
    <string name="sound_description_storm">Be careful</string>
    <string name="sound_description_fireplace">Pure pleasure</string>
    <string name="sound_description_birds">Enjoy</string>
    <string name="sound_description_street">Who can soothe a</string>
    <string name="sound_description_bar">Many help</string>
    <string name="sound_description_waves">Close your eyes, put on your headphones</string>
    <string name="sound_description_foliage">Sit down and listen to</string>
    <string name="sound_description_train">Choo-choo-choo-Choo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_theme_title">Themes</string>
    <string name="action_settings">Settings</string>
    <string name="restart_needed">Application will restart to apply settings</string>
    <string name="settings_cat_visual">Visual style</string>
    <string name="sound_description_catpurpur" tools:ignore="Typos">Purr Purr</string>
    <string name="sound_title_catpurpur">Cat</string>
    <string name="action_timer">Timer</string>
    <string name="action_timer_5min">5 min</string>
    <string name="action_timer_15min">15 min</string>
    <string name="action_timer_30min">30 min</string>
    <string name="action_timer_45min">45 min</string>
    <string name="action_timer_60min">60 min</string>
    <string name="action_timer_set">"Timer set to "</string>
    <string name="action_timer_remain">Remain</string>
    <string name="sec">sec</string>
    <string name="action_timer_cancel">Cancel timer</string>
    <string name="action_timer_canceled">Timer canceled</string>
    <string name="min">min</string>
    <!-- Strings related to Settings -->


</resources>
