<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_timer"
        android:title="@string/action_timer"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_recent_history"
        app:showAsAction="never">
        <menu>
            <item
                android:title="@string/action_timer_5min"
                android:id="@+id/action_timer_5min" />
            <item
                android:title="@string/action_timer_15min"
                android:id="@+id/action_timer_15min" />
            <item
                android:title="@string/action_timer_30min"
                android:id="@+id/action_timer_30min" />
            <item
                android:title="@string/action_timer_45min"
                android:id="@+id/action_timer_45min" />
            <item
                android:title="@string/action_timer_60min"
                android:id="@+id/action_timer_60min" />
            <item
                android:title="@string/action_timer_cancel"
                android:id="@+id/action_timer_cancel" />
        </menu>
    </item>
    <item  android:id="@+id/action_turn_off_all"
           android:title="@string/action_turn_off_all"
           android:orderInCategory="100"
           app:showAsAction="never"/>
    <item  android:id="@+id/action_contact"
           android:title="@string/action_contact"
           android:orderInCategory="101"
           app:showAsAction="never"/>
    <item  android:id="@+id/action_about"
           android:title="@string/action_about"
           android:orderInCategory="102"
           app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="103"
          app:showAsAction="never"/>
    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          android:orderInCategory="104"
          app:showAsAction="never"/>
</menu>
